@@ -8,7 +8,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# $Id: ttkGenStubs.tcl,v 1.5 2010/02/05 17:42:21 nijtmans Exp $
+# $Id: ttkGenStubs.tcl,v 1.6 2010/02/05 21:33:14 jenglish Exp $
 #
 # SOURCE: tcl/tools/genStubs.tcl, revision 1.20
 #
@@ -782,7 +782,7 @@ proc genStubs::emitInit {name textVar} {
 	append text "\nstatic const ${capName}StubHooks ${name}StubHooks = \{\n"
 	set sep "    "
 	foreach sub $hooks($name) {
-	    append text $sep "&${sub}ConstStubs"
+	    append text $sep "&${sub}Stubs"
 	    set sep ",\n    "
 	}
 	append text "\n\};\n"
@@ -797,9 +797,9 @@ proc genStubs::emitInit {name textVar} {
     }
 
     if {$root} {
-	append text "\nconst ${capName}Stubs ${name}ConstStubs = \{\n"
+	append text "\nconst ${capName}Stubs ${name}Stubs = \{\n"
     } else {
-	append text "\nstatic const ${capName}Stubs ${name}ConstStubs = \{\n"
+	append text "\nstatic const ${capName}Stubs ${name}Stubs = \{\n"
     }
     append text "    TCL_STUB_MAGIC,\n"
     append text "    ${CAPName}_STUBS_EPOCH,\n"
